app2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: app2-container
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
          - name: app2-configmap
            mountPath: /usr/share/nginx/html/index.html
            subPath: index.html
      volumes:
      - name: app2-configmap
        configMap:
          name: app2-configmap
          items:
          - key: index.html
            path: index.html
