traefik-app1-ingress-path.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: app1-ingressroute
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`collector.example.com`) && Pathprefix(`/path1`)
      kind: Rule
      services:
        - name: app1-service
          namespace: default
          port: 80
    - match: Host(`collector.example.com`) && Pathprefix(`/path2`)
      kind: Rule
      services:
        - name: app1-service
          namespace: default
          port: 80
